--- a/css/misc.css
+++ b/css/misc.css
@@ -16,7 +16,7 @@
 	cursor: pointer;
 	padding: 5px 20px;
 	margin: 5px;
-	border-radius: 10px;
+	border-radius: 4px;
 	border: 2px solid;
 	color: var(--color);
 
@@ -71,7 +71,7 @@
 
 /* Horizontal/vertical lines */
 .vl {
-	border-left: 6px solid var(--color);
+	border-left: 6px solid var(--split);
 	height: 100%;
 	position: absolute;
 	left: 50%;
